--- a/index.html
+++ b/index.html
@@ -27,12 +27,10 @@
                 <input type="text" placeholder="Procure aqui" id="procurar">
                 <button onclick="buscarTema()">Buscar</button>
             </div>
+            <div id="auth-container"></div>
         </header>
-
-        <div class="container-noticias">
-
-        </div>
     </div>
+    <div class="container-noticias"></div>
 
     <footer>
         <div id="footer_content">
@@ -48,5 +46,9 @@
     </footer>
 
     <script src="app.js"></script>
+    <script src="auth.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', checkLoginState);
+    </script>
 </body>
 </html>
